force-app/main/default/objects/Account/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <label>Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>