force-app/main/default/objects/Account/fields/MarinerExternalId__c.field-meta.xml
<CustomField>
    <fullName>MarinerExternalId__c</fullName>
    <externalId>true</externalId>
    <label>MarinerExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>